--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -459,33 +459,39 @@ I denne opgave har jeg kort forklaret om numerisk integration og redegjort for d
 \begin{thebibliography}{9}
 \bibitem{numeriskintegration}
 	Den Store Danske - Mogens Esrom Larsen,
-	\emph{Numerisk Integration}
+	\emph{Numerisk Integration},
+	Besøgt d. 30/01/2015\\
 	\url{http://www.denstoredanske.dk/It,_teknik_og_naturvidenskab/Matematik_og_statistik/It_og_numerisk_analyse/numerisk_integration}
 	
 
 \bibitem{simpsonsmetode}
 	Interactive Maths - Murray Bourne,
-	\emph{Simpson's Rule}
+	\emph{Simpson's Rule},
+	Besøgt d. 26/01/2015\\
 	\url{http://www.intmath.com/integration/6-simpsons-rule.php}
 	
 \bibitem{2012matA}
 	Undervisningsministeriet,
-	\emph{Forberedelse til Matematik A højere teknisk eksamen 2012}
+	\emph{Forberedelse til Matematik A højere teknisk eksamen 2012},
+	Besøgt d. 24/01/2015\\
 	\url{http://uvm.dk/~/media/UVM/Filer/Udd/Gym/PDF12/Proever\%20og\%20eksamen/120608\%20Mat\%20A\%20htx\%20Forberedelsesmateriale.pdf}
 	
 \bibitem{version2:algoritme}
 	Version2.dk - Klaus Hansen og Casper Thomsen,
-	\emph{Leksikon: Algoritme}
+	\emph{Leksikon: Algoritme},
+	Besøgt d. 30/01/2015\\
 	\url{http://www.version2.dk/leksikon/Algoritme}
 	
 \bibitem{denstoredanske:algoritme}
 	Den Store Danske - Jens Clausen og senere af Uffe Rasmussen,
-	\emph{Algoritme}
+	\emph{Algoritme},
+	Besøgt d. 30/01/2015\\
 	\url{http://www.denstoredanske.dk/It,_teknik_og_naturvidenskab/Informatik/Software,_programmering,_internet_og_webkommunikation/algoritme}
 \bibitem{forvswhile}
 
 	Stoimen's web log,
-	\emph{JavaScript Performance: for vs. while}
+	\emph{JavaScript Performance: for vs. while},
+	Besøgt d. 28/01/2015\\
 	\url{http://www.stoimen.com/blog/2012/01/24/javascript-performance-for-vs-while/}
 \end{thebibliography}
 
